# SRIFT-Open_Source

./: .gitignore  LICENSE  README.md  manifest.json  smithery.yaml
Favicon/: browserconfig.xml  site.webmanifest
docs/: AGENTS.md  about.md  ai-instructions.md  auth.md  llms-full.txt  llms.txt  privacy.md
install/: install.bat  install.ps1  install.sh  run.ps1  run.sh
integrations/: README.md
integrations/anthropic/: README.md  tool_use.py
integrations/autogen/: autogen_example.py
integrations/aws-lambda/: README.md
integrations/cloudflare-workers/: README.md
integrations/cohere/: README.md
integrations/crewai/: crewai_example.py
integrations/docker/: Dockerfile  docker-compose.yml
integrations/dspy/: dspy_example.py
integrations/gcp-cloud-run/: README.md
integrations/gemini/: README.md  function_calling.py
integrations/github-actions/: srift-action.yml
integrations/grok/: README.md
integrations/kubernetes/: srift-sidecar.yaml
integrations/langchain/: langchain_js.mjs  langchain_python.py
integrations/llamaindex/: llamaindex_example.py
integrations/make/: README.md
integrations/mastra/: README.md
integrations/mistral/: README.md
integrations/n8n/: README.md
integrations/ollama/: README.md
integrations/openai/: README.md  function_calling.py
integrations/perplexity/: README.md
integrations/replit/: README.md
integrations/zapier/: README.md
sdk/: README.md
sdk/rust/: Cargo.toml  srift.rs
specs/: agent.json  ai-plugin.json  ai.txt  changelog.json  compat.json  mcp-registry.json  openapi.json  server-card.json
(+15 files in other folders)
